--- a/fortify/composer.json
+++ b/fortify/composer.json
@@ -12,7 +12,8 @@
         "laravel/fortify": "^1.16",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "willvincent/laravel-rateable": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
